Moved doc to doc directory